--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "clean-architecture-prisma",
+  "name": "orders-service",
   "version": "1.0.0",
-  "description": "Clean code architecture with prisma",
-  "main": "index.ts",
+  "description": "Managing orders in an e-commerce microservice application",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo Error: No test scripts added",
     "start": "node dist/index.js",
@@ -15,6 +15,7 @@
     "prepare": "npm.cmd run compile",
     "pretest": "npm.cmd run compile",
     "posttest": "npm.cmd run lint",
+    "prisma:generate": "npx prisma generate",
     "migrate": "npx prisma migrate dev --name init"
   },
   "keywords": [
@@ -28,7 +29,6 @@
     "@eslint/js": "^9.6.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/kafkajs": "^1.9.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.10",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
@@ -52,7 +52,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
-    "kafkajs": "^2.2.4",
+    "node-rdkafka": "^3.1.0",
     "winston": "^3.13.1",
     "winston-daily-rotate-file": "^5.0.0"
   },
